--- a/.github/workflows/starter.yml
+++ b/.github/workflows/starter.yml
@@ -22,11 +22,9 @@ jobs:
 
     steps:
       # Check out the code from the repository.
-      - uses: 
-        actions/checkout@v3
+      - uses: actions/checkout@v3
       # Set up a Node.js environment using the specified node version.
-      - uses: 
-        actions/setup-node@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
 
@@ -42,5 +40,3 @@ jobs:
       # Send a console message at completion.
       - run: |
           echo "Hello ${{github.actor}}. You pushed to ${{github.repository}} at $(date)."
-
-        
